--- a/resources/sass/pages/_welcome.scss
+++ b/resources/sass/pages/_welcome.scss
@@ -1,5 +1,6 @@
 body.welcome-page {
     background: $white;
+    overflow-x: hidden;
 }
 
 .wrapper {
